<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayMessageActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/folio_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Toolbar"
        app:popupTheme="@style/Toolbar"
        app:collapseIcon="?attr/homeAsUpIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblCerrarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:onClick="cerrar_sesion"
            android:text="@string/btnCerrarSesion"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/lytFolio02"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblNumeroSerie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lblNumeroSerie" />

        <EditText
            android:id="@+id/txtNumeroSerie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtNumeroSerie"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:gravity="center_horizontal"
            android:imeOptions="actionSearch" />

        <Button
            android:id="@+id/btnComenzar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="funComenzar"
            android:text="@string/btn02"
            android:theme="@style/Boton"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>